--- a/index.html
+++ b/index.html
@@ -8,6 +8,14 @@
     <link rel="stylesheet" href="estilos/style.css">
 </head>
 <body>
+    <main>
+        <section id="telefone">
+
+        </section>
+        <section id="rsocial">
+
+        </section>
+    </main>
     
 </body>
 </html>
