--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -10,10 +10,15 @@
 <body>
     <main>
         <section id="telefone">
-
+            <iframe scr id="tela" name="tela" src="home.html" frameborder="0" scrolling = "no" Seu navegador não é compatível com isso. ></iframe>
         </section>
         <section id="rsocial">
-
+            <a href="home.html" target="tela"> <img src="imagens/logo-home.jpg" alt="home"> <br></a>
+            <a href="#" target="tela"> <img src="imagens/logo-instagram.jpg" alt="instagram"><br></a>
+            <a href="#" target="tela"> <img src="imagens/logo-youtube.jpg" alt="youtube"><br></a>
+            <a href="#" target="tela"> <img src="imagens/logo-github.jpg" alt="github"><br></a>
+            <a href="#" target="tela"> <img src="imagens/logo-twitter.jpg" alt="twitter"><br></a>
+            <a href="#" target="tela"> <img src="imagens/logo-facebook.jpg" alt="facebook"><br></a>
         </section>
     </main>
     
