projeto quase finalizado

--- a/home.html
+++ b/home.html
@@ -18,6 +18,11 @@
             background: url(imagens/tela-home.jpg) no-repeat top center;
             background-size: cover;
         }
+
+        ::-webkit-scrollbar{
+    width: 0;
+    height: 0;
+}
     </style>
 </head>
 <body>
