--- a/index.html
+++ b/index.html
@@ -6,19 +6,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projeto Redes Sociais</title>
     <link rel="stylesheet" href="estilos/style.css">
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 </head>
 <body>
     <main>
         <section id="telefone">
-            <iframe scr id="tela" name="tela" src="home.html" frameborder="0" scrolling = "no" Seu navegador não é compatível com isso. ></iframe>
+            <iframe scr id="tela" name="tela" src="home.html" frameborder="0"  Seu navegador não é compatível com isso. ></iframe>
         </section>
         <section id="rsocial">
             <a href="home.html" target="tela"> <img src="imagens/logo-home.jpg" alt="home"> <br></a>
-            <a href="#" target="tela"> <img src="imagens/logo-instagram.jpg" alt="instagram"><br></a>
-            <a href="#" target="tela"> <img src="imagens/logo-youtube.jpg" alt="youtube"><br></a>
-            <a href="#" target="tela"> <img src="imagens/logo-github.jpg" alt="github"><br></a>
-            <a href="#" target="tela"> <img src="imagens/logo-twitter.jpg" alt="twitter"><br></a>
-            <a href="#" target="tela"> <img src="imagens/logo-facebook.jpg" alt="facebook"><br></a>
+            <a href="insta.html" target="tela"> <img src="imagens/logo-instagram.jpg" alt="instagram"><br></a>
+            <a href="youtube.html" target="tela"> <img src="imagens/logo-youtube.jpg" alt="youtube"><br></a>
+            <a href="github.html" target="tela"> <img src="imagens/logo-github.jpg" alt="github"><br></a>
+            <a href="facebook.html" target="tela"> <img src="imagens/logo-facebook.jpg" alt="facebook"><br></a>
         </section>
     </main>
     
