Projeto finalizado com sucesso

--- a/facebook.html
+++ b/facebook.html
@@ -9,6 +9,6 @@
 </head>
 <body>
     <img src="imagens/tela-facebook.jpg" alt="facebook">
-    <a target="_blank" href="https://pt-br.facebook.com/gustavoguanabara/">ACESSE</a>    
+    <a target="_blank" href="https://www.facebook.com/Vixc12">ACESSE</a>    
 </body>
 </html>
