--- a/insta.html
+++ b/insta.html
@@ -9,6 +9,6 @@
 </head>
 <body>
     <img src="imagens/tela-instagram.jpg" alt="instagram">
-    <a target="_blank" href="https://www.instagram.com/gustavoguanabara/">ACESSE</a>    
+    <a target="_blank" href="https://www.instagram.com/vitor_gomes_vix/">ACESSE</a>    
 </body>
 </html>
