--- a/youtube.html
+++ b/youtube.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="estilos/social.css">
 </head>
 <body>
-    <img src="imagens/tela-youtube.png" alt="youtube">
-    <a target="_blank" href="https://www.youtube.com/@CursoemVideo">ACESSE</a>    
+    <img src="imagens/tela-youtube.jpg" alt="youtube">
+    <a target="_blank" href="https://www.youtube.com/channel/UCpGanD9TqeWPYLQz21OypFg">ACESSE</a>    
 </body>
 </html>
