--- a/github.html
+++ b/github.html
@@ -9,6 +9,6 @@
 </head>
 <body>
     <img src="imagens/tela-github.jpg" alt="github">
-    <a target="_blank" href="https://github.com/gustavoguanabara">ACESSE</a>    
+    <a target="_blank" href="https://github.com/vitorgomes-r">ACESSE</a>    
 </body>
 </html>
